--- a/public/signup_landing_page.css
+++ b/public/signup_landing_page.css
@@ -1,45 +1,83 @@
 body {
     margin: auto;
     background-image: url('summer.jpg');
-    background-size: cover;
+    background-size: cover 300px;
     background-repeat:no-repeat;
+    background-size: cover;
      
 }
 
-/* .welcomeback {
+.main {
+    margin: auto;
+    width: 50%;
+    background: rgba(234, 234, 234, 0.8);
+    border-radius: 5%;
+}
+
+.welcome {
+    margin-top: 10%;
+    padding: 30px;
+}
+
+
+/* .welcome {
     display: flex;
-    
-    justify-content: stretch;
+   
     margin:auto;
     width: 60%;
     padding: 10px;
     margin-top: 10%;
 } */
 
-body img {
-    border-radius: 50%;
-    width: 90%;
-    height: 90%;
-}
-
-.profile-image {
-    margin-left: 90%;
-    margin-top: 1%;
-    margin-bottom: 1%;
-}
-
 body h1 {
     font-family: 'Times New Roman', Times, serif;
 }
 
+body img {
+    border-radius: 50%;
+    height: 150px;
+    width: 150px;
+    margin: auto;
+}
+
+.profile-image {
+    display: flex;
+    justify-content: center;
+}
+
+.self-card {
+    margin-top: 0px;
+    padding: 10px;
+    border-radius: 10px;
+}
+
+.card-title {
+    margin-left: 3px;
+}
+
+.card-title text {
+    font-size: 1.2rem;
+    font-weight: bold;
+}
+
+.add-new-reminder {
+    font-size: 1.2rem;
+    font-weight: bold;
+    margin-top: 30px;
+    margin-bottom: 5px;
+    margin-left: 3px;
+}
+
+.add-reminder-button {
+    display: flex;
+    justify-content: center;
+}
+
 .welcomeback {
     margin-left: 1%;
+    margin-bottom: 5%;
+    margin-top: 5%;
 }
-
-.card {
-    margin:auto;
-}
-
-.btn-primary {
-    margin-left: 38%;
+.welcomeback h1 {
+    text-align: center;
 }
