remove add reminder button in landing page for existing user

--- a/views/landing_page.ejs
+++ b/views/landing_page.ejs
@@ -42,20 +42,17 @@
                 </div>
                 <ul class="list-group">
                     <% remindersList.forEach((item) => { %>
-                        <% if (item.trim().length !== 0) { %> <!-- ignore empty string entries -->
+                        <% if (item.length !== 0) { %> <!-- ignore empty string entries -->
                         <li class="list-group-item"><%= item %></li>
                         <% } %>
                     <% }) %>
                 </ul>
-                <form class="form-inline" action="/add-reminder" method="post">
-                    <div class="form-group mb-2">
+                
+                    <!-- <div class="form-group mb-2">
                         <label for="inputReminder" class="sr-only add-new-reminder">Add a New Reminder</label>
                         <input type="text" class="form-control" name="newReminder" placeholder="Reminder">
-                    </div>
-                    <div class="add-reminder-button">
-                        <button type="submit" class="btn btn-primary mb-2"> + Add reminder</button>
-                    </div>
-                </form>
+                    </div> -->
+                
             </div>
         </div>
     </div>
