--- a/public/landing_page.css
+++ b/public/landing_page.css
@@ -60,6 +60,17 @@ body img {
     font-weight: bold;
 }
 
+.to-do-item {
+    display: flex;
+}
+
+.list-group-item {
+    flex-grow: 1;
+    border: 0;
+    border-left: 1px solid rgba(0,0,0,.125);
+    border-bottom: 1px solid rgba(0,0,0,.125)
+}
+
 .add-new-reminder {
     font-size: 1.2rem;
     font-weight: bold;
