Change remove button text

--- a/views/landing_page.ejs
+++ b/views/landing_page.ejs
@@ -45,7 +45,7 @@
                         <% if (item.length !== 0) { %> <!-- ignore empty string entries -->
                             <div>
                                 <li class="list-group-item"><%= item %></li>
-                                <form action="/remove-reminder-login" method="post"><button type="submit" class="btn btn-outline-danger"> - Remove</button></form>
+                                <form action="/remove-reminder-login" method="post"><button type="submit" class="btn btn-outline-danger">X</button></form>
                             </div>
                         <% } %>
                     <% }) %>
