--- a/views/landing_page.ejs
+++ b/views/landing_page.ejs
@@ -43,7 +43,7 @@
                 <ul class="list-group">
                     <% remindersList.forEach((item) => { %>
                         <% if (item.length !== 0) { %> <!-- ignore empty string entries -->
-                            <div>
+                            <div class ="to-do-item">
                                 <li class="list-group-item"><%= item %></li>
                                 <form action="/remove-reminder-login" method="post"><button type="submit" class="btn btn-outline-danger">X</button></form>
                             </div>
