--- a/public/signup_landing_page.css
+++ b/public/signup_landing_page.css
@@ -66,6 +66,7 @@ body img {
 
 .list-group-item {
     flex-grow: 1;
+    border: 0;
     border-left: 1px solid rgba(0,0,0,.125);
     border-bottom: 1px solid rgba(0,0,0,.125)
 }
